# application/src/main/java/com/jobshunter/controller/TestController.java
@@ -5,7 +5,11 @@ import com.jobshunter.database.service.UserDataService;
 import com.jobshunter.dto.EmailRequest;
 import com.jobshunter.dto.JobHuntResponse;
 import com.jobshunter.service.application.notifiers.EmailNotifierService;
+import com.jobshunter.service.clients.google.ParseResult;
+import com.jobshunter.service.clients.google.SerpApiJobsClient;
+import io.jsonwebtoken.lang.Collections;
 import jakarta.validation.Valid;
+import java.io.IOException;
 import java.util.Map;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -34,6 +38,9 @@ public class TestController {
   @Autowired
   private UserDataService userDataService;
 
+  @Autowired
+  private SerpApiJobsClient serpApi;
+
   @PostMapping(value = "/email/send", consumes = MediaType.MULTIPART_FORM_DATA_VALUE)
   public ResponseEntity<?> send(
       @Valid @ModelAttribute EmailRequest request,
@@ -61,6 +68,34 @@ public class TestController {
     emailNotifierService.sendUsingTemplate(jobs.jobsFound(), user);
     log.info("Email sent successfully to {}", user.getEmail());
     return ResponseEntity.ok(Map.of("message", "Email sent successfully"));
+  }
+
+  @PostMapping(value = "/searchWithSerp", consumes = MediaType.APPLICATION_JSON_VALUE)
+  public ResponseEntity<?> searchJobsWithSERP(
+      @Valid @RequestBody SearchWithSerpRequest request,
+      @AuthenticationPrincipal UserDetails userDetails
+  ) throws IOException {
+    if (userDetails == null) {
+      throw new ResponseStatusException(HttpStatus.UNAUTHORIZED, "Authentication required");
+    }
+    UserEntity user = userDataService.getUser(userDetails.getUsername())
+        .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "User not found"));
+    log.info("Searching jobs for {}", user.getUsername());
+    ParseResult jobs = serpApi.searchJobs(request);
+    if (Collections.isEmpty(jobs.jobs())) {
+      return ResponseEntity.badRequest().body(Map.of("error", jobs.error()));
+    } else {
+      return ResponseEntity.ok(jobs);
+    }
+  }
+
+  public record SearchWithSerpRequest(
+      String query,
+      String engine,
+      String country,
+      String language
+  ) {
+
   }
 
 }
